[package]
name = "uzume-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio= { version="1.38", features = ["full"] }
axum={ version="0.7.5", features = ["multipart"] }
serde={ version="1.0", features = ["derive"] }
serde_json = "1.0.120"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
